--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,10 @@
 name: Mandelbrot
 main: me.sablednah.Mandelbrot.Mandelbrot
-version: 1.0
+version: 1.1
 description: >
              Mandelbrot!
 
 commands:
     Mandelbrot:
         description: Plot a Mandelbrot set
-        usage: /<command> <width> <height>
+        usage: /<command> <width> <height|depth> [flat]
